# Growth-OS

./: .env.example  .gitignore  .gitleaks.toml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  engine-operating-model.md  getting-started.md  runtime-contract.md
docs/adr/: ADR-021-engineering-operating-system.md  ADR-022-ai-runtime-boundary.md  ADR-023-growth-os-open-source-boundary.md  ADR-024-engine-operating-model.md  ADR-025-content-engine-buffer-transport.md  ADR-026-content-engine-review-selection.md
docs/api/: queue-api.md
docs/turning-points/: TP-003-editorial-validation-reset.md
engines/: README.md
engines/_shared/: eos_queue.py
engines/content/: validate_content_generate.py  validate_content_publish.py  validate_content_review.py  validate_content_select.py  validate_e2e_production.py  validate_m1.py
engines/content/collector/docs/: COLLECTOR-DESIGN-001-grok-trend-intelligence.md
engines/content/collector/tests/: _helpers.py  e2e_collect_inc3.py  e2e_smoke.py  test_browser_adapter.py  test_collector.py  test_evidence_store.py  (+5 more)
engines/content/config/: policy.json  sources.json
engines/content/docs/: opportunity-discovery-design.md  opportunity-discovery-report.md
engines/content/lib/: buffer_client.py  collector_signal.py  pool_client.py  run_discover_stage.py  run_generate_stage.py  run_opportunity_discovery.py  run_publish_stage.py  run_review_stage.py  run_score_stage.py  run_select.py  selection.py  selection_schedule.py
examples/minimal-consumer/: example_consumer.py
migrations/: 0001_eos_queue.sql
runtime/contract/: capabilities.schema.json
tests/contract/: README.md  mock_runtime.py  test_runtime_contract.py
(+25 files in other folders)
