[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "growth-os"
version = "0.1.0"
description = "Open-source AI execution platform: Engineering OS orchestration + runtime-agnostic AI contract."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Growth OS Maintainers" }]
keywords = ["ai", "orchestration", "queue", "workers", "agents", "platform"]
dependencies = ["requests>=2.28"]

[project.optional-dependencies]
dev = ["pytest>=7", "gitleaks; sys_platform != 'win32'"]

[tool.setuptools.packages.find]
where = ["."]
include = ["engines*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
