[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "growth-os"
version = "0.1.0"
description = "Open-source AI execution platform: Engineering OS orchestration + runtime-agnostic AI contract."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Growth OS Maintainers" }]
keywords = ["ai", "orchestration", "queue", "workers", "agents", "platform"]
dependencies = ["requests>=2.28"]

[project.optional-dependencies]
# Note: `gitleaks` is intentionally NOT a pip dependency. Gitleaks is a Go binary
# distributed via GitHub releases, not PyPI (there is no `gitleaks` package on PyPI),
# so `pip install gitleaks` fails on non-win32 CI runners and broke the `contract`
# job. Secret scanning is covered by the `gitleaks/gitleaks-action@v2` GitHub Action
# in ci.yml (the `secret-scan` job), which needs no Python dependency.
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["engines*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
